[PR-13] - Adding Hamburger Menu Outline and Clamp on CSS

--- a/about.html
+++ b/about.html
@@ -17,28 +17,33 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <!-- Muruvvet Header Hero Start-->
+    
+     <!-- Muruvvet Header Hero Start-->
     <div class="about-page-hero">
       <div class="hero-container">
         <div class="h-top-nav-bar">
-          <img class="tnb-logo" src="images/logo.png" alt="Logo">
-          <div class="tnb-nav-bar">
-            <ul class="nb-nav-elements">
-              <li><a href="#" target="_blank">Home</a></li>
-              <li class="ne-about"><a href="#" target="_blank">About</a></li>
-                <div class="ne-dropdown-services">
-                  <li><a href="#" target="_blank" class="ne-services">Services<i class="fa fa-caret-down"></i></a>
-                  <ul class="ds-dropdown-menu">
-                    <li><a href="#" target="_blank">Honeymoon Packages</a></li>
-                    <li><a href="#" target="_blank">Tours Packages</a></li>
-                    <li><a href="#" target="_blank">Musical Events</a></li>
-                    <li><a href="#" target="_blank">Build Packages</a></li>
-                  </ul>
-                </div>
-              </li>
-              <li><a href="#" target="_blank">Upcoming Packages</a></li>
-            </ul>
-            <button class="nb-button">Get In Touch</button>
+          <img src="images/logo.png" alt="Logo">
+          <div class="h-hamburger-menu">
+            <input class="hm-button" type="checkbox" id="hm-button">
+            <label class="hm-icon" for="hm-button"><span class="menu-icon"></span></label>
+            <div class="tnb-nav-bar">
+              <ul class="nb-nav-elements">
+                <li><a href="#" target="_blank">Home</a></li>
+                <li class="ne-about"><a href="#" target="_blank">About</a></li>
+                  <div class="ne-dropdown-services">
+                    <li><a href="#" target="_blank" class="ne-services">Services<i class="fa fa-caret-down"></i></a>
+                    <ul class="ds-dropdown-menu">
+                      <li><a href="#" target="_blank">Honeymoon Packages</a></li>
+                      <li><a href="#" target="_blank">Tours Packages</a></li>
+                      <li><a href="#" target="_blank">Musical Events</a></li>
+                      <li><a href="#" target="_blank">Build Packages</a></li>
+                    </ul>
+                    </li>
+                  </div>
+                <li><a href="#" target="_blank">Upcoming Packages</a></li>
+              </ul>
+              <button class="nb-button">Get In Touch</button>
+            </div>
           </div>
         </div>
         <div class="h-middle-script">
