--- a/about.html
+++ b/about.html
@@ -22,28 +22,26 @@
     <div class="about-page-hero">
       <div class="hero-container">
         <div class="h-top-nav-bar">
-          <img src="images/logo.png" alt="Logo">
-          <div class="h-hamburger-menu">
-            <input class="hm-button" type="checkbox" id="hm-button">
-            <label class="hm-icon" for="hm-button"><span class="menu-icon"></span></label>
-            <div class="tnb-nav-bar">
-              <ul class="nb-nav-elements">
-                <li><a href="#" target="_blank">Home</a></li>
-                <li class="ne-about"><a href="#" target="_blank">About</a></li>
-                  <div class="ne-dropdown-services">
-                    <li><a href="#" target="_blank" class="ne-services">Services<i class="fa fa-caret-down"></i></a>
-                    <ul class="ds-dropdown-menu">
-                      <li><a href="#" target="_blank">Honeymoon Packages</a></li>
-                      <li><a href="#" target="_blank">Tours Packages</a></li>
-                      <li><a href="#" target="_blank">Musical Events</a></li>
-                      <li><a href="#" target="_blank">Build Packages</a></li>
-                    </ul>
-                    </li>
-                  </div>
-                <li><a href="#" target="_blank">Upcoming Packages</a></li>
-              </ul>
-              <button class="nb-button">Get In Touch</button>
-            </div>
+        <img src="images/logo.png" alt="Logo">
+        <input class="hamburger-menu-button" type="checkbox" id="hamburger-menu-button">
+        <label class="hamburger-menu-icon" for="hamburger-menu-button"><span class="menu-icon"></span></label>
+          <div class="tnb-nav-bar">
+            <ul class="nb-nav-elements">
+              <li><a href="#" target="_blank">Home</a></li>
+              <li class="ne-about"><a href="#" target="_blank">About</a></li>
+                <div class="ne-dropdown-services">
+                  <li><a href="#" target="_blank" class="ne-services">Services<i class="fa fa-caret-down"></i></a>
+                  <ul class="ds-dropdown-menu">
+                    <li><a href="#" target="_blank">Honeymoon Packages</a></li>
+                    <li><a href="#" target="_blank">Tours Packages</a></li>
+                    <li><a href="#" target="_blank">Musical Events</a></li>
+                    <li><a href="#" target="_blank">Build Packages</a></li>
+                  </ul>
+                  </li>
+                </div>
+              <li><a href="#" target="_blank">Upcoming Packages</a></li>
+              <li><button>Get In Touch</button></li>
+            </ul>
           </div>
         </div>
         <div class="h-middle-script">
