[PR-1] - html structure changed (div-test).

--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
       </div>
     </div>
     <!-- erkin explore section END-->
+    <!--Bu div en aşağıda kalmalı / id="test"-->
     <div id="test"></div>
-    <!--Bu div en aşağıda kalmalı-->
     <script src="js/index.js"></script>
   </body>
 </html>
