--- a/index.html
+++ b/index.html
@@ -424,5 +424,8 @@
       </div>
     </div>
     <!-- erkin explore section END-->
+    <!--Bu div en aşağıda kalmalı / id="test"-->
+    <div id="test"></div>
+    <script src="js/index.js"></script>
   </body>
 </html>
