[PR-13] - Changes After Cloning Project

--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
                   </li>
                 </div>
               <li><a href="#" target="_blank">Upcoming Packages</a></li>
-              <li><button>Get In Touch</button></li>
             </ul>
+            <button class="nb-button">Get In Touch</button>
           </div>
         </div>
         <div class="h-middle-script">
