[PR-6] - Updated index html and css.

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <h2 class="lb-title">Let's Make Your<br />Next Holiday Amazing</h2>
         <div class="lb-signature">
           <img
-            class="lb-signature"
+            class="lb-signature-img"
             src="images/liberty-statue-Line.png"
             alt=""
           />
