--- a/package-details.html
+++ b/package-details.html
@@ -14,83 +14,82 @@
     />
   </head>
   <body>
-  </div class="tp-container">
-    </div class="tp-bottom-container">
-    </div class="tp-details-container">
-        </h2 class= "tp-details-title">Tour Plan</h2>
-    </div class="tp-detail">
-    </div class="tp-detail-left">
-    <span class="tp-detail-number">01</span>
-    </div>
-  <div class="tp-detail-right">
-</h3> Day 1: Departure</h3>
-        <p class="tp-detail-description">
-            Qui Tempore Voluptate Qui Quia Commodi Rem Praesentium Alias
-             Et Voluptates Officia Sed Molestiae Sint Et Coluptas Quos.
-             Qui Harum Repudiandae Galisum Dolorem
-        </p>
-        <ul class="tp-detail-list">
-            <li class="tp-detail-item">5 Star Accommodation</li>
-            <li class="tp-detail-item">Breakfast</li>
-            <li class="tp-detail-item">5 Star Accommodation</li>
-            <li class="tp-detail-item">Breakfast</li>
-        </ul>
-        <span class="tp-detail-number">02</span>
-        
-</h3> Day 2: Visiting Zurich, Geneva and Zermatt</h3>
-        <p class="tp-detail-description">
-           Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis, Sem. Nulla 
-           Consequat Massa Quis Enim. Donec Pede Justo, Fringilla Vel, Aliquet Nec, 
-           Vulputate Eget, Arcu. In Enim Justo, Rhoncus Ut, İmperdiet.
-        </p>
-        <ul class="tp-detail-list">
-            <li class="tp-detail-item">5 Star Accommodation</li>
-            <li class="tp-detail-item">Breakfast</li>
-            <li class="tp-detail-item">5 Star Accommodation</li>
-            <li class="tp-detail-item">Breakfast</li>
-        </ul>
+    <div class="tp-container">
+      <div class="tp-bottom-container">
+        <div class="tp-details-container">
+          <h2 class="tp-details-title">Tour Plan</h2>
+          <div class="tp-detail">
+            <div class="tp-detail-left">
+              <span class="tp-detail-number">01</span>
+            </div>
+            <div class="tp-detail-right">
+              <h3>Day 1: Departure</h3>
+              <p class="tp-detail-description">
+                Qui Tempore Voluptate Qui Quia Commodi Rem Praesentium Alias Et
+                Voluptates Officia Sed Molestiae Sint Et Coluptas Quos. Qui
+                Harum Repudiandae Galisum Dolorem
+              </p>
+              <ul class="tp-detail-list">
+                <li class="tp-detail-item">5 Star Accommodation</li>
+                <li class="tp-detail-item">Breakfast</li>
+                <li class="tp-detail-item">5 Star Accommodation</li>
+                <li class="tp-detail-item">Breakfast</li>
+              </ul>
+              <span class="tp-detail-number">02</span>
+
+              <h3>Day 2: Visiting Zurich, Geneva and Zermatt</h3>
+              <p class="tp-detail-description">
+                Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis,
+                Sem. Nulla Consequat Massa Quis Enim. Donec Pede Justo,
+                Fringilla Vel, Aliquet Nec, Vulputate Eget, Arcu. In Enim Justo,
+                Rhoncus Ut, İmperdiet.
+              </p>
+              <ul class="tp-detail-list">
+                <li class="tp-detail-item">5 Star Accommodation</li>
+                <li class="tp-detail-item">Breakfast</li>
+                <li class="tp-detail-item">5 Star Accommodation</li>
+                <li class="tp-detail-item">Breakfast</li>
+              </ul>
               <span class="tp-detail-number">03</span>
-        
-</h3> Day 3: Rest</h3>
-        <p class="tp-detail-description">
-           Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis, Sem. Nulla 
-           Consequat Massa Quis Enim. Donec Pede Justo, Fringilla Vel, Aliquet Nec, 
-           Vulputate Eget, Arcu. In Enim Justo, Rhoncus Ut, İmperdiet.
-        </p>
-        <ul class="tp-detail-list">
-            <li class="tp-detail-item">5 Star Accommodation</li>
-            <li class="tp-detail-item">Breakfast</li>
-            </ul>
-            <span class="tp-detail-number">04</span>
- </h3> Day 4: Historical Tour</h3>  
-      <p class="tp-detail-description">
-           Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis, Sem. Nulla 
-           Consequat Massa Quis Enim. Donec Pede Justo, Fringilla Vel, Aliquet Nec, 
-           Vulputate Eget, Arcu. In Enim Justo, Rhoncus Ut, İmperdiet.
-        </p>
-        <ul class="tp-detail-list">
-            <li class="tp-detail-item">5 Star Accommodation</li>
-            <li class="tp-detail-item">Breakfast</li>
-            <li class="tp-detail-item">5 Star Accommodation</li>
-            <li class="tp-detail-item">Breakfast</li>
-        </ul>
-        <span class="tp-detail-number">05</span>
-        </h3> Day 5: Return</h3> 
-        <p class="tp-detail-description">
-          Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis, Sem. Nulla 
-          Consequat Massa Quis Enim. Donec Pede Justo, Fringilla Vel, Aliquet Nec, 
-          Vulputate Eget, Arcu. In Enim Justo, Rhoncus Ut, İmperdiet A, Venenatis Vitae, 
-          Justo. Nullam Dictum Felis Eu Pede Mollis Pretium.
-        </p>
 
-
-
-
-       </div>
+              <h3>Day 3: Rest</h3>
+              <p class="tp-detail-description">
+                Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis,
+                Sem. Nulla Consequat Massa Quis Enim. Donec Pede Justo,
+                Fringilla Vel, Aliquet Nec, Vulputate Eget, Arcu. In Enim Justo,
+                Rhoncus Ut, İmperdiet.
+              </p>
+              <ul class="tp-detail-list">
+                <li class="tp-detail-item">5 Star Accommodation</li>
+                <li class="tp-detail-item">Breakfast</li>
+              </ul>
+              <span class="tp-detail-number">04</span>
+              <h3>Day 4: Historical Tour</h3>
+              <p class="tp-detail-description">
+                Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis,
+                Sem. Nulla Consequat Massa Quis Enim. Donec Pede Justo,
+                Fringilla Vel, Aliquet Nec, Vulputate Eget, Arcu. In Enim Justo,
+                Rhoncus Ut, İmperdiet.
+              </p>
+              <ul class="tp-detail-list">
+                <li class="tp-detail-item">5 Star Accommodation</li>
+                <li class="tp-detail-item">Breakfast</li>
+                <li class="tp-detail-item">5 Star Accommodation</li>
+                <li class="tp-detail-item">Breakfast</li>
+              </ul>
+              <span class="tp-detail-number">05</span>
+              <h3>Day 5: Return</h3>
+              <p class="tp-detail-description">
+                Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis,
+                Sem. Nulla Consequat Massa Quis Enim. Donec Pede Justo,
+                Fringilla Vel, Aliquet Nec, Vulputate Eget, Arcu. In Enim Justo,
+                Rhoncus Ut, İmperdiet A, Venenatis Vitae, Justo. Nullam Dictum
+                Felis Eu Pede Mollis Pretium.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
- 
-    </div>
-</div>
   </body>
 </html>
