[PR-18] - Package Tour Plan eklendi

--- a/package-details.html
+++ b/package-details.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/package-details.css" />
     <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="styles/package-details.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -23,11 +23,11 @@
               <span class="tp-detail-number">01</span>
             </div>
             <div class="tp-detail-right">
-              <h3>Day 1: Departure</h3>
+              <h3 class="tp-detail-title">Day 1: Departure</h3>
               <p class="tp-detail-description">
-                Qui Tempore Voluptate Qui Quia Commodi Rem Praesentium Alias Et
-                Voluptates Officia Sed Molestiae Sint Et Coluptas Quos. Qui
-                Harum Repudiandae Galisum Dolorem
+                Qui tempore voluptate qui quia commodi rem praesentium alias et
+                voluptates officia sed molestiae sint et voluptas quos. Qui
+                harum repudiandae galisum dolorem
               </p>
               <ul class="tp-detail-list">
                 <li class="tp-detail-item">5 Star Accommodation</li>
@@ -35,14 +35,18 @@
                 <li class="tp-detail-item">5 Star Accommodation</li>
                 <li class="tp-detail-item">Breakfast</li>
               </ul>
+            </div>
+          </div>
+          <div class="tp-detail">
+            <div class="tp-detail-left">
               <span class="tp-detail-number">02</span>
-
-              <h3>Day 2: Visiting Zurich, Geneva and Zermatt</h3>
+            </div>
+            <div class="tp-detail-right">
+              <h3 class="tp-detail-title">Day 2: Departure</h3>
               <p class="tp-detail-description">
-                Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis,
-                Sem. Nulla Consequat Massa Quis Enim. Donec Pede Justo,
-                Fringilla Vel, Aliquet Nec, Vulputate Eget, Arcu. In Enim Justo,
-                Rhoncus Ut, İmperdiet.
+                Qui tempore voluptate qui quia commodi rem praesentium alias et
+                voluptates officia sed molestiae sint et voluptas quos. Qui
+                harum repudiandae galisum dolorem
               </p>
               <ul class="tp-detail-list">
                 <li class="tp-detail-item">5 Star Accommodation</li>
@@ -50,26 +54,18 @@
                 <li class="tp-detail-item">5 Star Accommodation</li>
                 <li class="tp-detail-item">Breakfast</li>
               </ul>
-              <span class="tp-detail-number">03</span>
-
-              <h3>Day 3: Rest</h3>
+            </div>
+          </div>
+          <div class="tp-detail">
+            <div class="tp-detail-left">
+              <span class="tp-detail-number">01</span>
+            </div>
+            <div class="tp-detail-right">
+              <h3 class="tp-detail-title">Day 1: Departure</h3>
               <p class="tp-detail-description">
-                Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis,
-                Sem. Nulla Consequat Massa Quis Enim. Donec Pede Justo,
-                Fringilla Vel, Aliquet Nec, Vulputate Eget, Arcu. In Enim Justo,
-                Rhoncus Ut, İmperdiet.
-              </p>
-              <ul class="tp-detail-list">
-                <li class="tp-detail-item">5 Star Accommodation</li>
-                <li class="tp-detail-item">Breakfast</li>
-              </ul>
-              <span class="tp-detail-number">04</span>
-              <h3>Day 4: Historical Tour</h3>
-              <p class="tp-detail-description">
-                Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis,
-                Sem. Nulla Consequat Massa Quis Enim. Donec Pede Justo,
-                Fringilla Vel, Aliquet Nec, Vulputate Eget, Arcu. In Enim Justo,
-                Rhoncus Ut, İmperdiet.
+                Qui tempore voluptate qui quia commodi rem praesentium alias et
+                voluptates officia sed molestiae sint et voluptas quos. Qui
+                harum repudiandae galisum dolorem
               </p>
               <ul class="tp-detail-list">
                 <li class="tp-detail-item">5 Star Accommodation</li>
@@ -77,18 +73,48 @@
                 <li class="tp-detail-item">5 Star Accommodation</li>
                 <li class="tp-detail-item">Breakfast</li>
               </ul>
-              <span class="tp-detail-number">05</span>
-              <h3>Day 5: Return</h3>
+            </div>
+          </div>
+          <div class="tp-detail">
+            <div class="tp-detail-left">
+              <span class="tp-detail-number">01</span>
+            </div>
+            <div class="tp-detail-right">
+              <h3 class="tp-detail-title">Day 1: Departure</h3>
               <p class="tp-detail-description">
-                Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis,
-                Sem. Nulla Consequat Massa Quis Enim. Donec Pede Justo,
-                Fringilla Vel, Aliquet Nec, Vulputate Eget, Arcu. In Enim Justo,
-                Rhoncus Ut, İmperdiet A, Venenatis Vitae, Justo. Nullam Dictum
-                Felis Eu Pede Mollis Pretium.
+                Qui tempore voluptate qui quia commodi rem praesentium alias et
+                voluptates officia sed molestiae sint et voluptas quos. Qui
+                harum repudiandae galisum dolorem
               </p>
+              <ul class="tp-detail-list">
+                <li class="tp-detail-item">5 Star Accommodation</li>
+                <li class="tp-detail-item">Breakfast</li>
+                <li class="tp-detail-item">5 Star Accommodation</li>
+                <li class="tp-detail-item">Breakfast</li>
+              </ul>
+            </div>
+          </div>
+          <div class="tp-detail">
+            <div class="tp-detail-left">
+              <span class="tp-detail-number">01</span>
+            </div>
+            <div class="tp-detail-right">
+              <h3 class="tp-detail-title">Day 1: Departure</h3>
+              <p class="tp-detail-description">
+                Qui tempore voluptate qui quia commodi rem praesentium alias et
+                voluptates officia sed molestiae sint et voluptas quos. Qui
+                harum repudiandae galisum dolorem
+              </p>
+              <ul class="tp-detail-list">
+                <li class="tp-detail-item">5 Star Accommodation</li>
+                <li class="tp-detail-item">Breakfast</li>
+                <li class="tp-detail-item">5 Star Accommodation</li>
+                <li class="tp-detail-item">Breakfast</li>
+              </ul>
             </div>
           </div>
         </div>
+        <div>YAPILACAK OLAN SAĞ TARAF</div>
       </div>
     </div>
   </body>
