--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
     <!-- Muruvvet Testimonials End-->
     <!-- Yasemin Homepage Footer Start-->
 
-    <footer>
+    <footer class="homepage-footer">
       <div class="footer-container">
         <div class="footer-main">
           <div class="footer-column-one">
@@ -671,7 +671,7 @@
           >Copyright @ Xpro 2022. All Rights Reserved</span
         >
       </div>
-      <!-- <img class="footer-bg" src="images/footer-bg.png" alt="" /> -->
+      <img class="footer-bg" src="images/footer-bg.png" alt="" />
     </footer>
   </body>
 </html>
