--- a/index.html
+++ b/index.html
@@ -12,9 +12,148 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
+    <!--Erkin Hero Section START-->
+    <div class="homepage-hero-section">
+      <header class="hero-section">
+        <div class="hes-hero">
+          <input type="checkbox" name="" id="hes-check" />
+          <div class="hes-header-logo">
+            <img src="images/logo.png" alt="" />
+          </div>
+
+          <div class="hes-nav">
+            <div class="hes-links">
+              <ul>
+                <li class="hes-link" style="--i: 0.6s">
+                  <a href="index.html">Home</a>
+                </li>
+                <li class="hes-link" style="--i: 0.85s">
+                  <a href="about.html">About</a>
+                </li>
+                <li class="hes-link" style="--i: 1.1s">
+                  <a href="#"
+                    >Services <i class="fa-solid fa-caret-down"></i
+                  ></a>
+                  <div class="hes-dropdown">
+                    <ul>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Honeymoon Packages</a>
+                      </li>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Tours Packages</a>
+                      </li>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Musical Events</a>
+                      </li>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Build Package</a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="hes-link" style="--i: 1.35s">
+                  <a href="#">Upcomming Packages</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="hes-action-btn" style="--i: 1.8s">
+              <a href="#" class="hes-btn">Get in Touch</a>
+            </div>
+          </div>
+
+          <div class="hes-hamburger-menu-container">
+            <div class="hes-hamburger-menu">
+              <div></div>
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="hes-title-box">
+        <div style="width: fit-content">
+          <img src="images/Vector-1.png" alt="" />
+        </div>
+        <h2>No matter where you're going to, we'll take you there</h2>
+        <div class="hes-select-box">
+          <input
+            class="hes-input hes-place"
+            type="text"
+            placeholder="Where to?"
+          />
+          <img src="images/line.png" alt="" />
+          <select class="hes-input">
+            <option value="">Travel Type</option>
+            <option value="Honeymoon Vacation">Honeymoon Vacation</option>
+            <option value="Musical Events">Musical Events</option>
+          </select>
+          <img src="images/line001.png" alt="" />
+          <select class="hes-input">
+            <option value="">Duration</option>
+            <option value="One Day">One Day</option>
+            <option value="Two Day">Two Day</option>
+          </select>
+          <button><a href="">Submit</a></button>
+        </div>
+        <div class="hes-little-imgs">
+          <img
+            style="margin-left: -12px"
+            src="images/user-avatar2.png"
+            alt=""
+          />
+          <img
+            style="margin-left: -12px"
+            src="images/user-avatar3.png"
+            alt=""
+          />
+          <img
+            style="margin-left: -12px"
+            src="images/user-avatar4.png"
+            alt=""
+          />
+          <img
+            style="margin-left: -12px"
+            src="images/user-avatar1.png"
+            alt=""
+          />
+          <img
+            style="margin-left: -12px"
+            src="images/user-avatar5.png"
+            alt=""
+          />
+          <img
+            style="margin-left: -12px"
+            src="images/user-avatar6.png"
+            alt=""
+          />
+          <div style="margin-left: -12px" class="hes-avatar-emty">
+            <img
+              style="padding: 15px; display: flex"
+              src="images/plus.png"
+              alt=""
+            />
+          </div>
+          <h6>2,500 people booked Tomorrowland Event in last 24 Hours</h6>
+        </div>
+      </div>
+      <div class="hes-scroll-png">
+        <a href="#test"><img src="images/scroll.png" alt="" /></a>
+      </div>
+    </div>
+    <!-- Erkin Hero Section END-->
     <div class="homepage-partners-section">
       <div class="homepage-partners-section-container">
         <div class="ps-logo">
@@ -585,5 +724,8 @@
       />
     </div>
     <!-- Muruvvet Testimonials End-->
+    <!--Bu div en aşağıda kalmalı / id="test"-->
+    <div id="test"></div>
+    <script src="js/index.js"></script>
   </body>
 </html>
