--- a/packages.html
+++ b/packages.html
@@ -1,48 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tour and Travel Packages</title>
     <link rel="stylesheet" href="styles/packages.css" />
     <link rel="stylesheet" href="styles/shared.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Flow+Circular&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&family=Yesteryear&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Flow+Circular&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&family=Yesteryear&display=swap" rel="stylesheet">
-    </head>
-    <body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Flow+Circular&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&family=Yesteryear&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Flow+Circular&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&family=Yesteryear&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="package-detail-page-tour-gallery">
-        <div class="tour-gallery-container">
-            <div class="tg-header">
+      <header class="hero-section">
+        <div class="hes-hero">
+          <input type="checkbox" name="" id="hes-check" />
+          <div class="hes-header-logo">
+            <img src="images/logo.png" alt="" />
+          </div>
+
+          <div class="hes-nav">
+            <div class="hes-links">
+              <ul>
+                <li class="hes-link" style="--i: 0.6s">
+                  <a href="index.html">Home</a>
+                </li>
+                <li class="hes-link" style="--i: 0.85s">
+                  <a href="about.html">About</a>
+                </li>
+                <li class="hes-link" style="--i: 1.1s">
+                  <a href="#"
+                    >Services <i class="fa-solid fa-caret-down"></i
+                  ></a>
+                  <div class="hes-dropdown">
+                    <ul>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Honeymoon Packages</a>
+                      </li>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Tours Packages</a>
+                      </li>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Musical Events</a>
+                      </li>
+                      <li class="hes-dropdown-link">
+                        <a href="#">Build Package</a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="hes-link" style="--i: 1.35s">
+                  <a href="#">Upcomming Packages</a>
+                </li>
+              </ul>
             </div>
-            <div class="tg-secondary-nav-bar">
-                <div>
-                    <img src="images/location/location-info-logo.png" alt="Information Logo">
-                    <a href="#" target="_blank">Information</a>
-                </div>
-                <div>
-                    <img src="images/location/locations_calender-logo.png" alt="Tour Plan Logo">
-                    <a href="#" target="_blank">Tour Plan</a>
-                </div>
-                <div>
-                    <img src="images/location/icons_location.png" alt="Location Logo">
-                    <a href="#" target="_blank">Location</a>
-                </div>
-                <div>
-                    <img src="images/location/location-gallery-logo.png" alt="Gallery Logo">
-                    <a href="#" target="_blank">Gallery</a>
-                </div>
+
+            <div class="hes-action-btn" style="--i: 1.8s">
+              <a href="#" class="hes-btn">Get in Touch</a>
             </div>
-        
-            <div class="tg-image-and-information">
-                <div class="ii-image-gallery">
-                    <div class="ig-normal"><img src="images/packages/tour-gallery-normal1.png" alt="Image 1"></div>
-                    <div class="ig-normal"><img src="images/packages/tour-gallery-normal2.png" alt="Image 2"></div>
-                    <div class="ig-normal"><img src="images/packages/tour-gallery-normal3.png" alt="Image 3"></div>
-                    <div class="ig-vertical"><img src="images/packages/tour-gallery-vertical.png" alt="Image 4"></div>
-                    <div class="ig-horizontal-first"><img src="images/packages/tour-gallery-horizontal.png" alt="Image 5"></div>
-                    <div class="ig-normal4"><img src="images/packages/tour-gallery-normal4.png" alt="Image 6"></div>
-                    <div class="ig-horizontal-last"><img src="images/packages/tour-gallery-horizontal-last.png" alt="Image 7"></div>
-                    <!-- <div class="ig-footer">
+          </div>
+
+          <div class="hes-hamburger-menu-container">
+            <div class="hes-hamburger-menu">
+              <div></div>
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="tour-gallery-container">
+        <div class="tg-header"></div>
+        <div class="tg-secondary-nav-bar">
+          <div>
+            <img
+              src="images/location/location-info-logo.png"
+              alt="Information Logo"
+            />
+            <a href="#" target="_blank">Information</a>
+          </div>
+          <div>
+            <img
+              src="images/location/locations_calender-logo.png"
+              alt="Tour Plan Logo"
+            />
+            <a href="#" target="_blank">Tour Plan</a>
+          </div>
+          <div>
+            <img src="images/location/icons_location.png" alt="Location Logo" />
+            <a href="#" target="_blank">Location</a>
+          </div>
+          <div>
+            <img
+              src="images/location/location-gallery-logo.png"
+              alt="Gallery Logo"
+            />
+            <a href="#" target="_blank">Gallery</a>
+          </div>
+        </div>
+
+        <div class="tg-image-and-information">
+          <div class="ii-image-gallery">
+            <div class="ig-normal">
+              <img
+                src="images/packages/tour-gallery-normal1.png"
+                alt="Image 1"
+              />
+            </div>
+            <div class="ig-normal">
+              <img
+                src="images/packages/tour-gallery-normal2.png"
+                alt="Image 2"
+              />
+            </div>
+            <div class="ig-normal">
+              <img
+                src="images/packages/tour-gallery-normal3.png"
+                alt="Image 3"
+              />
+            </div>
+            <div class="ig-vertical">
+              <img
+                src="images/packages/tour-gallery-vertical.png"
+                alt="Image 4"
+              />
+            </div>
+            <div class="ig-horizontal-first">
+              <img
+                src="images/packages/tour-gallery-horizontal.png"
+                alt="Image 5"
+              />
+            </div>
+            <div class="ig-normal4">
+              <img
+                src="images/packages/tour-gallery-normal4.png"
+                alt="Image 6"
+              />
+            </div>
+            <div class="ig-horizontal-last">
+              <img
+                src="images/packages/tour-gallery-horizontal-last.png"
+                alt="Image 7"
+              />
+            </div>
+            <!-- <div class="ig-footer">
                         <img src="images/packages/tour-gallery-footer-left-arrow.png" alt="Left Arrow">
                         <p>1</p>
                         <p>2</p>
@@ -50,32 +154,55 @@
                         <p>4</p>
                         <img src="images/packages/tour-gallery-footer-right-arrow.png" alt="Right Arrow">
                     </div> -->
-                </div>
-                <div class="ii-information">
-                    <h1 class="i-title">Book This Tour</h1>
-                    <p class="i-script">Ex optio sequi et quos praesentium in nostrum 
-                        labore nam rerum iusto aut magni nesciunt? Quo 
-                        quidem neque iste expedita est dolo.
-                    </p>
-                    <div class="i-inputs">
-                        <div class="in-name"><input type="text" placeholder="Name"></div>
-                        <div class="in-mail"><input type="text" placeholder="Email"></div>
-                        <div class="in-mail"><input type="text" placeholder="Confirm Email"></div>
-                        <div class="in-phone"><input type="text" placeholder="Phone"></div>
-                        <div class="in-date"><input type="text" placeholder="dd-mm-yy"></div>
-                        <div class="in-ticket"><input type="text" placeholder="Number of ticket"></div>
-                        <div class="in-message"><input type="text" placeholder="Message"></div>
-                    
-                        <div class="in-availability"><button>Check Availability</button></div>
-                        <div class="in-booking"><button>Book Now</button></div>
-                    </div>
-                </div>
+          </div>
+          <div class="ii-information">
+            <h1 class="i-title">Book This Tour</h1>
+            <p class="i-script">
+              Ex optio sequi et quos praesentium in nostrum labore nam rerum
+              iusto aut magni nesciunt? Quo quidem neque iste expedita est dolo.
+            </p>
+            <div class="i-inputs">
+              <div class="in-name">
+                <input type="text" placeholder="Name" />
+              </div>
+              <div class="in-mail">
+                <input type="text" placeholder="Email" />
+              </div>
+              <div class="in-mail">
+                <input type="text" placeholder="Confirm Email" />
+              </div>
+              <div class="in-phone">
+                <input type="text" placeholder="Phone" />
+              </div>
+              <div class="in-date">
+                <input type="text" placeholder="dd-mm-yy" />
+              </div>
+              <div class="in-ticket">
+                <input type="text" placeholder="Number of ticket" />
+              </div>
+              <div class="in-message">
+                <input type="text" placeholder="Message" />
+              </div>
+
+              <div class="in-availability">
+                <button>Check Availability</button>
+              </div>
+              <div class="in-booking"><button>Book Now</button></div>
             </div>
-
-            <img class="tg-plant" src="images/location/tour-location-img002.png" alt="Plant Image">
-            <img class="tg-vacation" src="images/location/tour-location-img001.png" alt="Vacation Image">
+          </div>
         </div>
-    </div>
 
-    </body>
+        <img
+          class="tg-plant"
+          src="images/location/tour-location-img002.png"
+          alt="Plant Image"
+        />
+        <img
+          class="tg-vacation"
+          src="images/location/tour-location-img001.png"
+          alt="Vacation Image"
+        />
+      </div>
+    </div>
+  </body>
 </html>
