[PR-18] - Packages Tour Plan final version

--- a/packages.html
+++ b/packages.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles/shared.css" />
-    <link rel="stylesheet" href="styles/package-details.css" />
+    <link rel="stylesheet" href="styles/packages.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,9 +25,9 @@
             <div class="tp-detail-right">
               <h3 class="tp-detail-title">Day 1: Departure</h3>
               <p class="tp-detail-description">
-                Qui tempore voluptate qui quia commodi rem praesentium alias et
-                voluptates officia sed molestiae sint et voluptas quos. Qui
-                harum repudiandae galisum dolorem
+                Qui Tempore Voluptate Qui Quia Commodi Rem Praesentium Alias Et
+                Voluptates Officia Sed Molestiae Sint Et Voluptas Quos. Qui
+                Harum Repudiandae Galisum Dolorem
               </p>
               <ul class="tp-detail-list">
                 <li class="tp-detail-item">5 Star Accommodation</li>
@@ -42,11 +42,14 @@
               <span class="tp-detail-number">02</span>
             </div>
             <div class="tp-detail-right">
-              <h3 class="tp-detail-title">Day 2: Departure</h3>
+              <h3 class="tp-detail-title">
+                Day 2: Visiting Zurich, Geneva and Zermatt
+              </h3>
               <p class="tp-detail-description">
-                Qui tempore voluptate qui quia commodi rem praesentium alias et
-                voluptates officia sed molestiae sint et voluptas quos. Qui
-                harum repudiandae galisum dolorem
+                Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis,
+                Sem. Nulla Consequat Massa Quis Enim. Donec Pede Justo,
+                Fringilla Vel, Aliquet Nec, Vulputate Eget, Arcu. In Enim Justo,
+                Rhoncus Ut, İmperdiet.
               </p>
               <ul class="tp-detail-list">
                 <li class="tp-detail-item">5 Star Accommodation</li>
@@ -58,14 +61,15 @@
           </div>
           <div class="tp-detail">
             <div class="tp-detail-left">
-              <span class="tp-detail-number">01</span>
+              <span class="tp-detail-number">03</span>
             </div>
             <div class="tp-detail-right">
-              <h3 class="tp-detail-title">Day 1: Departure</h3>
+              <h3 class="tp-detail-title">Day 3: Rest</h3>
               <p class="tp-detail-description">
-                Qui tempore voluptate qui quia commodi rem praesentium alias et
-                voluptates officia sed molestiae sint et voluptas quos. Qui
-                harum repudiandae galisum dolorem
+                Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis,
+                Sem. Nulla Consequat Massa Quis Enim. Donec Pede Justo,
+                Fringilla Vel, Aliquet Nec, Vulputate Eget, Arcu. In Enim Justo,
+                Rhoncus Ut, İmperdiet.
               </p>
               <ul class="tp-detail-list">
                 <li class="tp-detail-item">5 Star Accommodation</li>
@@ -77,14 +81,15 @@
           </div>
           <div class="tp-detail">
             <div class="tp-detail-left">
-              <span class="tp-detail-number">01</span>
+              <span class="tp-detail-number">04</span>
             </div>
             <div class="tp-detail-right">
-              <h3 class="tp-detail-title">Day 1: Departure</h3>
+              <h3 class="tp-detail-title">Day 4: Historical Tour</h3>
               <p class="tp-detail-description">
-                Qui tempore voluptate qui quia commodi rem praesentium alias et
-                voluptates officia sed molestiae sint et voluptas quos. Qui
-                harum repudiandae galisum dolorem
+                Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis,
+                Sem. Nulla Consequat Massa Quis Enim. Donec Pede Justo,
+                Fringilla Vel, Aliquet Nec, Vulputate Eget, Arcu. In Enim Justo,
+                Rhoncus Ut, İmperdiet.
               </p>
               <ul class="tp-detail-list">
                 <li class="tp-detail-item">5 Star Accommodation</li>
@@ -96,14 +101,16 @@
           </div>
           <div class="tp-detail">
             <div class="tp-detail-left">
-              <span class="tp-detail-number">01</span>
+              <span class="tp-detail-number">05</span>
             </div>
             <div class="tp-detail-right">
-              <h3 class="tp-detail-title">Day 1: Departure</h3>
+              <h3 class="tp-detail-title">Day 5: Return</h3>
               <p class="tp-detail-description">
-                Qui tempore voluptate qui quia commodi rem praesentium alias et
-                voluptates officia sed molestiae sint et voluptas quos. Qui
-                harum repudiandae galisum dolorem
+                Donec Quam Felis, Ultricies Nec, Pellentesque Eu, Pretium Quis,
+                Sem. Nulla Consequat Massa Quis Enim. Donec Pede Justo,
+                Fringilla Vel, Aliquet Nec, Vulputate Eget, Arcu. In Enim Justo,
+                Rhoncus Ut, İmperdiet A, Venenatis Vitae, Justo. Nullam Dictum
+                Felis Eu Pede Mollis Pretium.
               </p>
               <ul class="tp-detail-list">
                 <li class="tp-detail-item">5 Star Accommodation</li>
